gitignore: ignore bitbake documentation build products
Missed the bitbake manual the last time around because it's in a
different directory.

Signed-off-by: Sascha Silbe <x-yo17@se-silbe.de>
Signed-off-by: Ross Burton <ross.burton@intel.com>
Signed-off-by: Richard Purdie <richard.purdie@linuxfoundation.org>

--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,9 @@ hob-image-*.bb
 /documentation/*/*.html
 /documentation/*/*.pdf
 /documentation/*/*.tgz
+/bitbake/doc/bitbake-user-manual/bitbake-user-manual.html
+/bitbake/doc/bitbake-user-manual/bitbake-user-manual.pdf
+/bitbake/doc/bitbake-user-manual/bitbake-user-manual.tgz
 pull-*/
 bitbake/lib/toaster/contrib/tts/backlog.txt
 bitbake/lib/toaster/contrib/tts/log/*
